# vkengine

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
VkEngine/Shaders/: TexturelessMesh.vert  TriMesh.vert
VkEngine/Source/: Main.cpp  VkAsset.cpp  VkEngine.h
VkEngine/Source/VkEngine/Asset/: Asset.cpp  Asset.h
VkEngine/Source/VkEngine/Core/: ConsoleVariableSystem.cpp  ConsoleVariableSystem.h  DeletionQueue.cpp  DeletionQueue.h  GlobalMacro.h  Logger.h  StringUtils.h
VkEngine/Source/VkEngine/Renderer/: BufferHandler.cpp  BufferHandler.h  Camera.cpp  Camera.h  DeletionQueue.cpp  DeletionQueue.h  DescriptorHandler.cpp  DescriptorHandler.h  DeviceHandler.cpp  DeviceHandler.h  Mesh.cpp  Mesh.h  PipelineHandler.cpp  PipelineHandler.h  PresentHandler.cpp  PresentHandler.h  RenderPassHandler.cpp  RenderPassHandler.h  Renderer.cpp  Renderer.h  SurfaceHandler.cpp  SurfaceHandler.h  SwapChainHandler.cpp  SwapChainHandler.h  Texture.cpp  Texture.h  vk_support.cpp  vk_type.h
vk_engine/assets/: lost_empire-RGBA.asset
vk_engine/shaders/: ambient_texture.frag  default_lit.frag  frag.spv  shader.frag  shader.vert  textureless.frag  textureless.spv  textureless_mesh.spv  vert.spv
vk_engine/src/: Camera.cpp  Camera.h  logger.h  main.cpp  vk_asset.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_mesh.cpp  vk_support.cpp
vk_engine/src/headers/: vk_engine.h  vk_initializers.h  vk_mesh.h  vk_support.h  vk_types.h
vk_engine/src/vk_engine/assets/: assets.cpp  assets.h
vk_engine/src/vk_engine/core/: logger.h
vk_engine/src/vk_engine/renderer/: camera.cpp  camera.h  vk_info.cpp  vk_info.h  vk_mesh.cpp  vk_mesh.h  vk_renderer.cpp  vk_renderer.h  vk_support.cpp  vk_support.h  vk_texture.cpp  vk_texture.h  vk_type.h
vk_engine/src/vulkan/: vk_engine.cpp  vk_engine.h  vk_info.cpp  vk_info.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_support.h  vk_texture.cpp  vk_texture.h  vk_types.h
